--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "westlake-backend",
   "scripts": {
-    "dev": "bun run --hot src/index.ts"
+    "dev": "bun run --hot src/index.ts",
+    "build": "bun build --target=bun --production --outfile=index.ts src/index.ts"
   },
   "dependencies": {
     "better-auth": "^1.2.7",
