--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
     "hono": "^4.7.8",
+    "jose": "^6.0.11",
     "nanoid": "^5.1.5",
     "pg": "^8.15.6"
   },
