fix: resolve /profile/all timeout and optimize query performance
  - Replace N+1 queries with batch queries using inArray
  - Add pagination support to limit data per request
  - Configure Bun server timeout via environment variables
  - Fix duplicate server startup issue in Docker deployment

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 DATABASE_URL=
 ALIYUN_ACCESSKEY_ID=
 ALIYUN_ACCESSKEY_SECRET=
+
+# Server Configuration
+PORT=3000
+IDLE_TIMEOUT=60
+MAX_REQUEST_BODY_SIZE=52428800
